# cappuccino-discord

./: .editorconfig  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: cappuccino.yml
cappuccino/: __init__.py  __main__.py  bot.py  config.py
cappuccino/config/: __init__.py  errors.py
cappuccino/database/: __init__.py  models.py
cappuccino/database/migrations/: env.py
cappuccino/database/migrations/versions/: 29987e15121d_rename_guild_members_and_user_profile_.py  5ef8ed75d713_initial_migration.py  97fa1b4701f2_add_guild_nicknames.py  bcdcae2b73e4_initial_migration.py
cappuccino/extensions/: __init__.py
cappuccino/extensions/botui/: __init__.py
cappuccino/extensions/catfacts/: __init__.py
cappuccino/extensions/core/: __init__.py
cappuccino/extensions/fun/: __init__.py
cappuccino/extensions/profiles/: __init__.py  models.py
cappuccino/models/: __init__.py
cappuccino/resources/: cappuccino-discord.service  config.yml  logging.yml
cappuccino/resources/config/: config.yml  logging.yml
cappuccino/resources/config/extensions/: catfacts.yml
