[tool.poetry]
name = "cappuccino-discord"
version = "0.6.1"
description = ""
authors = ["Lee Watson <rev@revthefox.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5.0"
sqlalchemy = { version = "^1.3.0", extras = ["postgresql"] }
alembic = "^1.4.0"
pyyaml = "^5.3"
aiohttp = { version = "^3.6.3", extras = ["speedups"] }
sentry-sdk = "^0.19.3"
dotty-dict = "^1.3.0"
httpx = {extras = ["http2", "brotli"], version = "^0.16.1"}
uvloop = "^0.14.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.2"
flake8 = "^3.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
